actually fixed the hori scrollbar on mobile

--- a/src/components/Photo.css
+++ b/src/components/Photo.css
@@ -3,7 +3,7 @@
     margin-inline: 10vw;
     margin-top: 40vh;
     height: 40vh;
-    width: 80vw;
+    width: 70vw;
     display: flex;
     justify-content: center;
     overflow: hidden;
